--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -33,17 +33,17 @@
 
 // Palette.
 	$palette: (
-		bg:					#312450,
-		bg-alt:				darken(#312450, 5),
+		bg:					#0A2147,
+		bg-alt:				darken(#0A2147, 5),
 		fg:					rgba(255,255,255,0.55),
 		fg-bold:			#ffffff,
 		fg-light:			rgba(255,255,255,0.35),
 		border:				rgba(255,255,255,0.15),
 		border-bg:			rgba(255,255,255,0.05),
-		accent1:			#5e42a6,
-		accent1-alt:		darken(#5e42a6, 10),
-		accent2:			#5052b5,
-		accent2-alt:		darken(#5052b5, 10),
+		accent1:			#001124,
+		accent1-alt:		darken(#000b16, 10),
+		accent2:			#160869,
+		accent2-alt:		darken(#160869, 10),
 		accent3:			#b74e91,
 		accent3-alt:		darken(#b74e91, 10)
 	);
